# c_plus_plus

./: Makefile
brick_game/common/board/: board.h
brick_game/common/cell/: cell.h
brick_game/common/collisions_checker/: collisions_checker.c
brick_game/common/common/: color_handler.h  colors.h  defines.h
brick_game/common/parameters/: parameters.h
brick_game/common/player/player_board/: player_board.h
brick_game/common/records/: records.h
brick_game/common/time_handler/: time_handler.h
brick_game/snake/Action/: action.cc  action.h
brick_game/snake/Model/: model.h
brick_game/snake/controller/: controller.cc  controller.h
brick_game/tetris/backend/: backend.h
brick_game/tetris/fsm/: callback.h  fsm.h
containers/: CMakeCache.txt  CMakeLists.txt  CleanAll.cmake  Makefile  clang.sh  cmake_install.cmake  containers.h  s21_containers.h  s21_containersplus.h  test
containers/containers/array/: array.h  array.tpp
containers/containers/deque/: deque.cpp  deque.h
containers/containers/list/: list.h  list.tpp  s21_list.cpp  s21_list.h
containers/containers/map/: map.h  map.tpp  s21_map.cpp  s21_map.h
containers/containers/node/: ListNode.h  double_linked_list_node.h  node.h
containers/containers/queue/: queue.h  s21_queue.cpp  s21_queue.h
containers/containers/set/: s21_set.cpp  s21_set.h  set.h  set.tpp
containers/containers/stack/: s21_stack.cpp  s21_stack.h  stack.h
containers/containers/tree/: tree.h  tree.tpp
containers/containers/vector/: s21_vector.cpp  s21_vector.h  vector.cpp  vector.h  vector.tpp
containers/iterators/: const_iterator.cpp  const_iterator.h  iterator.h
containers/tests/: array_tests.cpp  list_tests.cpp  main_tests.cpp  main_tests.h  map_tests.cpp  queue.cpp  set_tests.cpp  stack_tests.cpp  vector_test.cpp
containers/tests/deque_tests/: core_tests.cpp
containers/tests/list_tests/: core_tests.cpp
containers/tests/stack_tests/: init_tests.cpp
doxy/: Doxyfile  index.md
gui/desktop/View/: CMakeLists.txt  GridWidget.cpp  GridWidget.h  NextPlayerGridWidget.cpp  View.h  View.ui  ViewtabSwitcher.cpp  constants.h  styleHandler.cpp  styleHandler.h
matrix+/: s21_matrix_oop.cpp  s21_matrix_oop.h
matrix+/tests/: s21_matrix_oop_tests.c  s21_matrix_oop_tests.h
matrix_plus/: s21_matrix_oop.h
matrix_plus/matrix/: core.cpp  help_functions.cpp  operations.cpp
matrix_plus/unit_tests/: core_tests.cpp  main_tests.cpp  main_tests.h
snake/gui/cli/: frontend.c  frontend.h
snake/gui/desktop/View/: main.cpp
snake/matrix_plus/: Makefile
snake/matrix_plus/matrix/: init.cpp
snake/matrix_plus/unit_tests/: init_tests.cpp  operator_tests.cpp
snake/src/brick_game/common/: fsm_types.h
snake/src/brick_game/common/block/: block.c  block.h
snake/src/brick_game/common/board/: board.c
snake/src/brick_game/common/cell/: cell.c
snake/src/brick_game/common/collisions_checker/: collisions_checker.h
snake/src/brick_game/common/common/: color_handler.c
snake/src/brick_game/common/game_status/: game_status.c  game_status.h
snake/src/brick_game/common/player/: player.c  player.h
snake/src/brick_game/common/player/player_board/: player_board.c
snake/src/brick_game/common/records/: records.c
snake/src/brick_game/common/time_handler/: time_handler.c
snake/src/brick_game/snake/Model/: model.cc
snake/src/brick_game/snake/move_snake/: move_snake.cc  move_snake.h
snake/src/brick_game/tetris/backend/: backend.c
snake/src/brick_game/tetris/fsm/: fsm_matrix.c
snake/src/gui/desktop/View/: NextPlayerGridWidget.h  View.cpp  ViewtabSwitcher.h
tests/: model_tests.cc
untitled/: Dockerfile  containers.h  list.cpp  list.h  main.cpp  node.h  valgrind.sh
untitled/containers/array/: array.h  array.tpp
untitled/containers/iterators/: ListConstIterator.h  ListIterator.h  VectorConstIterator.h  VectorIterator.h
untitled/containers/list/: list.cpp  list.h  list.tpp
untitled/containers/map/: map.h  map.tpp
untitled/containers/node/: node.h
untitled/containers/queue/: queue.h
untitled/containers/set/: set.h  set.tpp
untitled/containers/stack/: stack.h
untitled/containers/tree/: tree.h  tree.tpp
untitled/containers/vector/: vector.cpp  vector.h  vector.tpp
untitled/tests/: array_tests.cpp  list_test.cpp  list_tests.cpp  main.h  main_tests.h  map_tests.cpp  queue.cpp  set_tests.cpp  stack_tests.cpp  vector_test.cpp
